--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -126,11 +126,14 @@ ol {
 
 .section-title h2 {
 	/* color: #111111; */
-		/* color: #111111; */
-		background: -webkit-linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));
-		-webkit-background-clip: text;
-		-webkit-text-fill-color: transparent;
+	color: #111111;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-bottom: 15px;
+}
 
+.section-title h3 {
+	color: rgba(42,56,143,1);
 	font-weight: 700;
 	text-transform: uppercase;
 	margin-bottom: 15px;
@@ -143,7 +146,8 @@ ol {
 .set-bg {
 	background-repeat: no-repeat;
 	background-size: cover;
-	background-position: top center;
+	/* background-position: top center; */
+	background-position: center;
 }
 
 .spad {
@@ -394,7 +398,7 @@ ol {
 }
 
 .nav-menu ul li a {
-	font-size: 8px;
+	font-size: 13px;
 	font-weight: 700;
 	text-transform: uppercase;
 	color: #111111;
@@ -1662,7 +1666,8 @@ ol {
 
 .blog-item .bi-text h5 a {
 	font-size: 20px;
-	color: #111111;
+	/* color: #111111; */
+	color: rgba(42,56,143,1);
 	font-weight: 700;
 	line-height: 27px;
 	text-transform: uppercase;
@@ -3130,3 +3135,34 @@ margin:auto;
 	height: 40px;
 	width: 100vw;
 }
+
+.gradient-text{
+	background: -webkit-linear-gradient(25deg, rgba(217,55,104,1),  rgba(42,56,143,1));
+	-webkit-background-clip: text;
+	background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+.lawwa-blue-text{
+	color: rgba(42,56,143,1) !important;
+}
+
+.register-div{
+	background-image: linear-gradient(80deg, rgba(217,55,104,1),  rgba(42,56,143,1));
+	background-image: url(../img/lawwa-img/badge-bg.png);
+	background-position: center;
+	background-size: cover;
+}
+
+
+.hero-wrap{
+	width: 100%;
+	height: 100%;
+	max-height: 550px;
+	position: inherit;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+}
+
