--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -1654,7 +1654,8 @@ ol {
 	color: #ffffff;
 	font-weight: 600;
 	display: inline-block;
-	background: #009603;
+	/* background: #009603; */
+	background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));
 	padding: 2px 12px;
 	text-transform: uppercase;
 }
@@ -1847,6 +1848,20 @@ site-btn{
 
 .blog-hero {
 	height: 960px;
+}
+
+.alt-blog-hero {
+	height: 550px;
+	background-position: bottom center;
+	
+	width: 100%;
+	background-repeat: no-repeat;
+	background-size: cover;
+	position: relative;
+	  
+	display:block;
+	margin:auto;
+
 }
 
 .blog-details-section {
@@ -3046,7 +3061,7 @@ margin:auto;
 
 
 .ad-banner{
-		height: 200px;
+		/* height: 200px; */
 		display: -webkit-box;
 		display: -ms-flexbox;
 		display: flex;
@@ -3166,3 +3181,13 @@ margin:auto;
 	background-attachment: fixed;
 }
 
+.contact-banner{
+	background-position: center;
+	background-size: cover;
+	background-repeat: no-repeat;
+
+	display: block;
+	width: 100%;
+	height: 100%;
+
+}
