--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -32,11 +32,28 @@
 /* Template default CSS
 /*----------------------------------------*/
 
+@font-face {
+	font-family: "Conthrax";
+	src: url("../fonts/conthrax/conthrax-sb.ttf");
+	src: url("https://yoursite.com/css/fonts/CustomFont.woff") format("woff"),
+	/* url("https://yoursite.com/css/fonts/CustomFont.otf") format("opentype"),
+	url("https://yoursite.com/css/fonts/CustomFont.svg#filename") format("svg"); */
+} 
+
+@font-face {
+	font-family: "Myriad";
+	src: url("../fonts/myriad-pro/MYRIADPRO-REGULAR.OTF");
+	/* src: url("https://yoursite.com/css/fonts/CustomFont.woff") format("woff"), */
+	/* url("https://yoursite.com/css/fonts/CustomFont.otf") format("opentype"),
+	url("https://yoursite.com/css/fonts/CustomFont.svg#filename") format("svg"); */
+} 
+
 html,
 body {
 	height: 100%;
 	/* font-family: "Open Sans", sans-serif; */
-	font-family: conthrax;
+	font-family: Myriad;
+	/* font-family: conthrax; */
 	-webkit-font-smoothing: antialiased;
 	/* font-smoothing: antialiased; */
 	/* background: -webkit-linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));
@@ -85,7 +102,8 @@ h6 {
 p {
 	font-size: 18px;
 	/* font-family: "Open Sans", sans-serif; */
-	font-family: conthrax;
+	/* font-family: conthrax; */
+	font-family: myriad;
 	color: #666666;
 	font-weight: 400;
 	line-height: 26px;
@@ -398,7 +416,7 @@ ol {
 }
 
 .nav-menu ul li a {
-	font-size: 14px;
+	font-size: 11px;
 	font-weight: 700;
 	text-transform: uppercase;
 	color: #111111;
@@ -639,7 +657,7 @@ ol {
 
 .right-btn {
 	text-align: right;
-	padding-top: 24px;
+	/* padding-top: 24px; */
 }
 
 .categories-slider.owl-carousel .owl-item.active .cs-item .cs-text h4 {
@@ -1093,7 +1111,7 @@ ol {
 .about-text {
 	background: #f5f5f5;
 	padding-left: 60px;
-	padding-top: 50px;
+	/* padding-top: 50px; */
 	height: 960px;
 }
 
@@ -2001,8 +2019,8 @@ site-btn{
 }
 
 .blog-details-text .bd-pics img {
-	width: calc(33.33% - 10px);
-	float: left;
+	/* width: calc(33.33% - 10px); */
+	/* float: left; */
 	margin-right: 10px;
 	margin-bottom: 10px;
 }
@@ -2763,7 +2781,7 @@ site-btn{
 	}
 	.hs-slider.owl-carousel .owl-nav button.owl-next {
 		right: 0;
-	}
+	}	
 	.right-btn {
 		text-align: left;
 		padding-top: 0;
@@ -3111,6 +3129,7 @@ margin:auto;
 }
 
 .cust-lawwa-ad-btn  {
+	font-family: conthrax;
 	margin-top: 25px;
 	cursor: pointer;
 	background: transparent;
@@ -3122,7 +3141,7 @@ margin:auto;
   
   .cust-lawwa-ad-btn::before {
 	margin-bottom: 20px;
-	font-family: conthrax;
+	/* font-family: conthrax; */
 	opacity: 0.1;
 	pointer-events: none;
   }
@@ -3188,5 +3207,83 @@ margin:auto;
 	display: block;
 	width: 100%;
 	height: 100%;
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media only screen and (min-width: 1430px) {
+	/* .container {
+		max-width: 1400px !important;
+	} */
+	.custom-social a {
+		display: inline-block;
+		font-size: 30px;
+		color: #ffffff;
+		margin-right: 15px;
+	}
+
+}
+
+@media only screen and (min-width: 1200px) {
+	/* .container {
+		max-width: 1170px;
+	} */
+
+	.custom-social a {
+		display: inline-block;
+		font-size: 26px;
+		color: #ffffff;
+		margin-right: 15px;
+	}
+}
+
+/* Medium Device = 1200px */
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+
+}
+
+/* Tablet Device = 768px */
+
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+
+}
+
+/* Wide Mobile = 480px */
+
+@media only screen and (max-width: 767px) {
+	/* .custom-social a {
+		display: inline-block;
+		font-size: 25px;
+		color: #ffffff;
+		margin-right: 15px;
+	} */
+
+}
+
+/* Small Device = 320px */
+
+@media only screen and (max-width: 479px) {
+	/* .carousel-responsive {
+		max-height: 60%;
+	} */
+
+	/* .custom-social a {
+		display: inline-block;
+		font-size: 10px;
+		color: #ffffff;
+		margin-right: 15px;
+	} */
 
 }
