--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -3214,11 +3214,13 @@ margin:auto;
 
 }
 
-
-
-
-
-
+.visit-counter{
+	display: inline-block;
+	padding: 6px 6px 4px;
+	border-radius: 3px;
+	background: #b09dc4;
+	margin-right: -2px;
+}
 
 
 
