--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -3206,6 +3206,19 @@ margin:auto;
 	background-attachment: fixed;
 }
 
+.service-hero-wrap{
+	width: 100%;
+	height: 100%;
+	max-height: 550px;
+	position: inherit;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+
+	background-image: url('../img/lawwa-img/img-selection/ProductServicesCollage.jpeg');
+}
+
 .contact-banner{
 	background-position: center;
 	background-size: cover;
@@ -3228,74 +3241,63 @@ margin:auto;
 	/* margin-right: -2px; */
 }
 
+.custom-ph-text {
+	background: url("../img/lawwa-img/plainbanner.jpeg") center center transparent;
+	background-size: cover;
+	/* background-image: url(img/lawwa-img/plainbanner.jpeg); */
+	display: inline-block;
+	padding: 60px 75px 65px;
+	text-align: center;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-bottom: 12px;
+}
 
 
 
-
-
-
-@media only screen and (min-width: 1430px) {
-	/* .container {
-		max-width: 1400px !important;
-	} */
+/* @media only screen and (min-width: 1430px) {
 	.custom-social a {
 		display: inline-block;
 		font-size: 30px;
 		color: #ffffff;
-		margin-right: 15px;
+		margin-right: 25px;
 	}
+} */
 
-}
-
-@media only screen and (min-width: 1200px) {
-	/* .container {
-		max-width: 1170px;
-	} */
-
+/* @media only screen and (min-width: 1200px) {
 	.custom-social a {
 		display: inline-block;
 		font-size: 26px;
 		color: #ffffff;
-		margin-right: 15px;
+		margin-right: 30px;
 	}
-}
+} */
 
 /* Medium Device = 1200px */
-
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
-
-}
+/* @media only screen and (min-width: 992px) and (max-width: 1199px) {
+} */
 
 /* Tablet Device = 768px */
 
-@media only screen and (min-width: 768px) and (max-width: 991px) {
-
-}
+/* @media only screen and (min-width: 768px) and (max-width: 991px) {
+} */
 
 /* Wide Mobile = 480px */
-
-@media only screen and (max-width: 767px) {
-	/* .custom-social a {
+/* @media only screen and (max-width: 767px) {
+	.custom-social a {
 		display: inline-block;
 		font-size: 25px;
 		color: #ffffff;
 		margin-right: 15px;
-	} */
-
-}
+	}
+} */
 
 /* Small Device = 320px */
-
-@media only screen and (max-width: 479px) {
-	/* .carousel-responsive {
-		max-height: 60%;
-	} */
-
-	/* .custom-social a {
+/* @media only screen and (max-width: 479px) {
+	.custom-social a {
 		display: inline-block;
 		font-size: 10px;
 		color: #ffffff;
 		margin-right: 15px;
-	} */
-
-}
+	}
+} */
