--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -3219,6 +3219,19 @@ margin:auto;
 	background-image: url('../img/lawwa-img/img-selection/ProductServicesCollage.jpeg');
 }
 
+.service-hero-wrap2{
+	width: 100%;
+	height: 100%;
+	max-height: 550px;
+	position: inherit;
+	background-size: cover;
+	background-repeat: no-repeat;
+	background-position: center center;
+	background-attachment: fixed;
+
+	background-image: url('../img/lawwa-img/img-selection/contactus.jpeg');
+}
+
 .contact-banner{
 	background-position: center;
 	background-size: cover;
@@ -3301,3 +3314,76 @@ margin:auto;
 		margin-right: 15px;
 	}
 } */
+
+.contact-text2 h3 {
+	color: #ffffff;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-bottom: 15px;
+}
+
+.contact-text2 p {
+	color: #ffffff;
+	margin-bottom: 32px;
+}
+
+.contact-text2 .ct-item {
+	overflow: hidden;
+	margin-bottom: 30px;
+}
+
+.contact-text2 .ct-item .ct-icon {
+	height: 80px;
+	width: 80px;
+	background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));
+	/* background: #009603; */
+	border-radius: 50%;
+	font-size: 40px;
+	line-height: 80px;
+	text-align: center;
+	color: #ffffff;
+	float: left;
+	margin-right: 30px;
+}
+
+.contact-text2 .ct-item .ct-text {
+	overflow: hidden;
+	padding-top: 12px;
+}
+
+.contact-text2 .ct-item .ct-text h5 {
+	font-size: 20px;
+	color: #ffffff;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-bottom: 10px;
+}
+
+.contact-text2 .ct-item .ct-text p {
+	color: #ffffff;
+	margin-bottom: 0;
+}
+
+.contact-text2 .ct-item .ct-text ul li {
+	list-style: none;
+	display: inline-block;
+	margin-right: 30px;
+	font-size: 15px;
+	color: #ffffff;
+	position: relative;
+}
+
+.contact-text2 .ct-item .ct-text ul li:after {
+	position: absolute;
+	right: -20px;
+	top: -2px;
+	content: "|";
+}
+
+.contact-text2 .ct-item .ct-text ul li:last-child {
+	margin-right: 0;
+}
+
+.contact-text2 .ct-item .ct-text ul li:last-child:after {
+	display: none;
+}
