--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -3255,7 +3255,7 @@ margin:auto;
 }
 
 .custom-ph-text {
-	background: url("../img/lawwa-img/plainbanner.jpeg") center center transparent;
+	background: url("../img/lawwa-img/plainbanner.png") center center transparent;
 	background-size: cover;
 	/* background-image: url(img/lawwa-img/plainbanner.jpeg); */
 	display: inline-block;
