--- a/lawwa-web-revised/css/style.css
+++ b/lawwa-web-revised/css/style.css
@@ -3217,7 +3217,7 @@ margin:auto;
 	background-position: center center;
 	background-attachment: fixed;
 
-	background-image: url('../img/lawwa-img/img-selection/ProductServicesCollage.jpeg');
+	background-image: url('../img/lawwa-img/services/servicesbanner.jpg');
 }
 
 .service-hero-wrap2{
